--- a/app/templates/checkout.html
+++ b/app/templates/checkout.html
@@ -1,73 +1,78 @@
-<div class="container">	
+<div class="container">
+<div class="row">
+	<div class="container col-md-8" style="border-right: solid black 1px" >	
 	<form name="myForm" class="form-horizontal" ng-show="showForm">
 		<h2>Contact Details</h2>
-
 		<div class="form-group">
-			<label class="col-sm-2 control-label">Name</label>
-			<div  class="col-sm-10">
-			<input class="form-control" type="text" name="address" ng-model="customer['Name']" >
+			<label class="col-md-2 control-label">Name</label>
+			<div  class="col-md-10">
+			<input class="form-control" type="text" name="address" ng-model="cart.customer.name">
 			</div>
 		</div>		
-		
+
 		<div class="form-group">
-			<label class="col-sm-2 control-label">Pincode</label>
-			<div class="col-sm-10">
-			<input class="form-control " type="text" name="address" ng-model="customer['Pincode']" >
+			<label class="col-md-2 control-label">Pincode</label>
+			<div class="col-md-10">
+			<input class="form-control " type="text" name="address" ng-model="cart.customer.pincode" >
+			</div>
+		</div>
+		
+		<div class="form-group">	
+			<label class="col-md-2 control-label">Address</label>
+			<div class="col-md-10">
+			<input class="form-control" type="text" name="address" ng-model="cart.customer.address" >
 			</div>
 		</div>
 		
 		<div class="form-group">
-	
-			<label class="col-sm-2 control-label">Address</label>
-			<div class="col-sm-10">
-			<input class="form-control" type="text" name="address" ng-model="customer['Address']" >
+			<label class="col-md-2 control-label">Landmark</label>
+			<div class="col-md-10">
+				<input class="form-control" type="text" name="address" ng-model="cart.customer.landmark" >
 			</div>
 		</div>
 		
 		<div class="form-group">
-	
-			<label class="col-sm-2 control-label">Landmark</label>
-			<div class="col-sm-10">
-			<input class="form-control" type="text" name="address" ng-model="customer['Landmark']" >
+			<label class="col-md-2 control-label">City</label>
+			<div class="col-md-10">
+			<input class="form-control" type="text" name="address" ng-model="cart.customer.city" >
 			</div>
 		</div>
 		
 		<div class="form-group">
-			<label class="col-sm-2 control-label">City</label>
-			<div class="col-sm-10">
-			<input class="form-control" type="text" name="address" ng-model="customer['City']" >
-			</div>
-		</div>
-		
-		<div class="form-group">
-			<label class="col-sm-2 control-label">Email</label>
-			<div class="col-sm-10">
-			<input class="form-control" type="email" name="address" ng-model="customer['Email']" >
+			<label class="col-md-2 control-label">Email</label>
+			<div class="col-md-10">
+			<input class="form-control" type="email" name="address" ng-model="cart.customer.email" >
 			</div>
 		</div>
 
 		<div class="form-group">
-			<label class="col-sm-2 control-label">Phone Number</label>
-			<div class="col-sm-10">
-			<input class="form-control" type="text" name="phone" ng-model="customer['Phone']" >
+			<label class="col-md-2 control-label">Phone Number</label>
+			<div class="col-md-10">
+			<input class="form-control" type="text" name="phone" ng-model="cart.customer.phone">
 			</div>
 		</div>
-		<button class="btn btn-primary" ng-click="hideForm()">Submit</button>
+		<button class="btn btn-primary" >Submit</button>
 	</form>
 	<!-- <pre>{{ myForm }}</pre> -->
 </div>
-<div class="container">
-	<span ng-hide="showForm" style="color: blue">Customer Details Saved !</span>
+		<div class="container col-md-4">
+			<span ng-hide="showForm" style="color: blue">Customer Details Saved !</span>
 
- 	<form>
- 		<h2>Total Amount : </h2>
- 		<h4>{{cart.totalPrice |  currency : "₹" : 2}}</h4>
- 		<h2>Payment Methods</h2>
- 		<button style="display: block"class="btn btn-primary btn-lg" ng-clck="showorder()">Cash On Delivery</button><br>
- 		<button style="display: block" class="btn btn-success btn-lg">Debit / Credit Card</button><br>
- 		<button style="display: block" class="btn btn-danger btn-lg">Net Banking
- 		</button><br>
- 		<button style="display: block" class="btn btn-warning btn-lg">UPI Payment
- 		</button><br>
- 	</form>
+		 	<form>
+		 		<h2>Total Amount : </h2>
+		 		<h4>{{cart.totalPrice |  currency : "₹" : 2}}</h4>
+		 		<h2>Payment Methods</h2>
+
+		 		<button style="display: block" class="btn btn-primary btn-lg" ng-click="placeOrder()">Cash On Delivery
+		 		</button><br>
+		 		<button style="display: block" class="btn btn-success btn-lg">
+		 		Debit / Credit Card
+		 		</button><br>
+		 		<button style="display: block" class="btn btn-danger btn-lg">Net Banking
+		 		</button><br>
+		 		<button style="display: block" class="btn btn-warning btn-lg">UPI Payment
+		 		</button><br>
+		 	</form>
+		</div>
+</div>
 </div>
