Backend Routes and Folder Structure Refactoring , Pagination

--- a/app/templates/addCuisine.html
+++ b/app/templates/addCuisine.html
@@ -4,14 +4,12 @@
 		<form class="form-horizontal container">
 			<h3>Add cuisine </h3>
 
-			<div class="form-group" style="max-width: 500px;">
+			<div class="form-group" style="max-width: 500px; padding-left: 15px">
 			<label >Name</label>
 			<input class="form-control" type="text" ng-model="cuisine.name">
 			</div>
-
-			<button class="btn btn-primary btn-lg" ng-click="submitCuisine()" style="display: inline ;  position: absolute; left: 15px;"  >Submit</button>
-
-			<button class="btn btn-danger btn-lg" ng-click="closeCuisine()" style="display: inline ; position: absolute; right: 70px; ">Cancel</button><!-- 
+			<button class="btn btn-primary btn-lg" ng-click="submitCuisine()" >Submit</button>
+			<button class="btn btn-danger btn-lg" ng-click="closeCuisine()" >Cancel</button><!-- 
 			<br>
 			<br> -->
 		</form>	
