--- a/app/templates/addItem.html
+++ b/app/templates/addItem.html
@@ -100,11 +100,10 @@
 			<button class="btn btn-success"  ng-click="increaseTaxesLength()">Add Taxes 
 			</button>
 			<br><br> -->
-
-			<button class="btn btn-primary btn-lg" ng-click="submitAddItem()" style="display: inline">Submit</button>
-				
-			<button class="btn btn-danger btn-lg" ng-click="closeAddItem()" style="display: inline ; position: absolute; right: 35px; ">Cancel</button>
-				
+			<div class="form-group">
+			<button class="btn btn-primary btn-lg" ng-click="submitAddItem()" style="display: inline ;  left: 10px;">Submit</button>
+						<button class="btn btn-danger btn-lg" ng-click="closeAddItem()" style="display: inline ;  left: 110px; ">Cancel</button>
+			</div>
 			<br><br>
 			
 		</form>
